--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colin's E-Portfolio 1</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/924a388b64.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <section id="about me">
+    <section id="about-me">
         <nav>
             <div class="personal__logo">Colin Lacasse</div>
 
             <ul class="nav__link--list">
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#languages" class="
 nav__link--anchor
 link__hover-effect
 link__hover-effect--black
 ">Languages</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#projects" class="
 nav__link--anchor
 link__hover-effect
 link__hover-effect--black
 ">Projects</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="mailto:email@email.com" class="
 nav__link--anchor
 nav__link--anchor-primary 
 ">Contact</a>
@@ -41,22 +42,222 @@ nav__link--anchor-primary
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/73086073039__C513D07E-A90D-41AF-B37C-9277B1617D8F.jpeg" class="about-me__picture"
-                        alt="Picture of me">
+                        <img src="./assets/73086073039__C513D07E-A90D-41AF-B37C-9277B1617D8F.jpeg"
+                            class="about-me__picture" alt="Picture of me">
                     </figure>
                     <h1 class="about-me__info--title">
-                        Hey! I'm <Span class="text--purple">Colin Lacasse</Span> 👋
+                        Hey! I'm <Span class="text--purple">Colin Lacasse</Span>&nbsp;<span class="wave">👋</span>
                     </h1>
                     <p class="about-me__info--para">
                         Lorem ipsum <strong class="text--purple"> sit amet consectetur adipisicing </strong>elit.
                         Voluptatibus placeat unde voluptates. Commodi quam provident qui vitae consequuntur nam maiores
                         ullam. Omnis quisquam aliquid, necessitatibus et totam odio eveniet suscipit.
                     </p>
+                    <div class="about-me__links">
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                        <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
+                            <i class="fa-solid fa-file-pdf"></i>
+                        </a>
+
+                    </div>
+                </div>
+                <figure class="about-me__img--container">
+                    <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+                </figure>
+            </div>
+        </div>
+    </section>
+
+    <section id="languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+
+                            <span class="language__name">HTML</span>
+                    </div>
                 </div>
             </div>
         </div>
-            
     </section>
+
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title"> Here are some of my <span class="text--purple">projects</span></h1>
+                <ul class="projects__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car Sales Project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic placeat nemo illo
+                                    maxime, eos velit! Reiciendis fugit ad cumque debitis praesentium soluta quos magnam
+                                    repudiandae maiores perferendis. Maiores, incidunt suscipit?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://www.github/yourlink" target="_blank"
+                                        class="project__description--link">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                    <a href="https://www.github/yourlink" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car Sales Project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic placeat nemo illo
+                                    maxime, eos velit! Reiciendis fugit ad cumque debitis praesentium soluta quos magnam
+                                    repudiandae maiores perferendis. Maiores, incidunt suscipit?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://www.github/yourlink" target="_blank"
+                                        class="project__description--link">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                    <a href="https://www.github/yourlink" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car Sales Project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic placeat nemo illo
+                                    maxime, eos velit! Reiciendis fugit ad cumque debitis praesentium soluta quos magnam
+                                    repudiandae maiores perferendis. Maiores, incidunt suscipit?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://www.github/yourlink" target="_blank"
+                                        class="project__description--link">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                    <a href="https://www.github/yourlink" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer__logo">
+                    <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+                </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fa-solid fa-arrow-up"></i>
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white">GitHub</a>
+                <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white">LinkedIn</a>
+                <a href="mailto:email@email.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white">Email</a>
+                <a href="./assets/Example Resume.pdf" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white" download>Resume</a>
+            </div>
+            <div class="footer__copywright">Colin Lacasse 2024</div>
+        </div>
+    </footer>
 </body>
 
 </html>
